<resources>
    <string name="app_name">v2+</string>
    <string name="app_name_debug">v2+debug</string>
    <string name="avatar">avatar</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="working">…</string>
    <string name="redeem_done">👌Done</string>
    <string name="reply">Reply</string>
    <string name="copy_reply_content">Copy reply content</string>
    <string name="egg">HoHoHo~</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="function_header">Function</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="auto_redeem_title">Auto redeem</string>
    <string name="auto_redeem_summary_on">Automatically get redeem when launch</string>
    <string name="auto_redeem_summary_off">Only get redeem when you click button</string>
    <string name="redeem">Redeem</string>
    <string name="login_hint">Click the circle to Login</string>
    <string name="balance">Balance</string>
    <string name="after_login_hint">After login to use</string>


    <!-- Test String -->
    <string name="test_long_string">This is a real very long string for testing, in this string, its contains so many word that make this string show long enough for testing.</string>
</resources>
