<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
                app:key="signature"
                app:title="@string/signature_title"
                app:useSimpleSummaryProvider="true" />

        <ListPreference
                app:defaultValue="reply"
                app:entries="@array/reply_entries"
                app:entryValues="@array/reply_values"
                app:key="reply"
                app:title="@string/reply_title"
                app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/function_header">

        <SwitchPreferenceCompat
                app:key="auto_redeem"
                app:title="@string/auto_redeem_title"
                app:summaryOn="@string/auto_redeem_summary_on"
                app:summaryOff="@string/auto_redeem_summary_off"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="Interface">
        <ListPreference
                app:key="theme_mode"
                app:title="Theme Mode"
                app:defaultValue="auto"
                app:entries="@array/theme_mode_entries"
                app:entryValues="@array/theme_mode_values"
                app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

</PreferenceScreen>
